2.12.0
Jun 13, 2020

FIX: no accessors for class CsvValueSeparator #221
FIX: Default Value Separator get frequently reset to comma, changes only applied after restart #222

2.11.1
May 9, 2020

FIX: Memory issues and freezes after updating #204

2.11.0
May 8, 2020

NEW: Adding custom separator #177

2.10.0
Apr 19, 2020

FIX: resolve CSV/TSV file type conflict for versions 2020.* with Database plugin

2.9.3
Mar 08, 2020

NEW: option to keep trailing spaces for CSV/TSV/PSV files
FIX: consider escape char inside quotes as escaped text

2.9.2
Feb 24, 2020

FIX: Backslash in text is considered a special character #184
FIX: NullPointerException thrown when trying to view CSV as table #185

2.9.1
Feb 15, 2020

FIX: update failed for AnAction #181
FIX: selection indicator for default separator action

2.9.0
Feb 07, 2020

NEW: customizable escape character #159
NEW: value separator setting moved from 'Code Style' to 'General'
+ lots of cleanup & rework

2.8.2
Jan 22, 2020

FIX: horizontal scrolling within table editor #169

2.8.1
Nov 22, 2019

FIX: vertical scrolling within table editor #164

2.8.0
Oct 12, 2019

NEW: improved font handling in table editor #122
FIX: proper font handling in balloon tooltips

NOTE: IDE versions older than 2017.3.* are no longer supported!

2.7.1
Sep 26, 2019

Support for IDE v192.*

2.7.0
Sep 16, 2019

NEW: add separator selection to table editor #140
FIX: coloring of table cells (e.g. selection mode)
FIX: enter edit mode via keyboard (e.g. ENTER key in cell)

2.6.4
Aug 30, 2019

FIX: scrollable table cells
FIX: auto cell height computation

2.6.3
Aug 25, 2019

FIX: Index out of bound error on multi line clear cells #151

2.6.2
Aug 09, 2019

FIX: AssertionError: Already disposed: Project (Disposed) #147
FIX: No fallback font used in table editor #145

2.6.1
Aug 01, 2019

NEW: plugin logo icons added (Thx to FineVisuals for support)

2.6.0
Jul 18, 2019

NEW: Table column width calculation and adjustment based on content

2.5.1
Jun 25, 2019
