@@ -31,6 +31,7 @@ public class CsvFileAttributes implements PersistentStateComponent<CsvFileAttrib
     static class Attribute {
         @OptionTag(converter = CsvValueSeparator.CsvValueSeparatorConverter.class)
         public CsvValueSeparator separator;
+        @OptionTag(converter = CsvEscapeCharacter.CsvEscapeCharacterConverter.class)
         public CsvEscapeCharacter escapeCharacter;
     }
 
