@@ -1,6 +1,7 @@
 2.12.0
-Jun 13, 2020
+Jun 14, 2020
 
+NEW: flexible settings format for value separator & escape character
 FIX: no accessors for class CsvValueSeparator #221
 FIX: Default Value Separator get frequently reset to comma, changes only applied after restart #222
 
